@@ -215,8 +215,8 @@ static int _read_pv(struct format_instance *fid, struct dm_pool *mem,
 	pv->pe_alloc_count = 0;
 	pv->fmt = fid->fmt;
 
-        /* Fix up pv size if missing */
-        if (!pv->size && pv->dev) {
+        /* Fix up pv size if missing or impossibly large */
+        if ((!pv->size || pv->size > (1ULL << 62)) && pv->dev) {
                 if (!dev_get_size(pv->dev, &pv->size)) {
                         log_error("%s: Couldn't get size.", pv_dev_name(pv));
                         return 0;
